env/code_53ebd2cc511ef/stderr.txt
  File "main.py", line 3
    if x % 3 ==0 || x % 5 == 0:
                  ^
SyntaxError: invalid syntax
